Base ccon autenticacion token

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 PORT=8080
 BASEAPIPATH='/api'
 USERPATH='/usuarios'
+AUTHPATH='/auth'
 USERTABLE='usuarios'
+SECRETORPRIVATEKEY=Est03sm1public@#%1235098&%
+TOKENEXPIRATION='180d'
