--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-joi-validation": "^5.0.0",
     "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.12",
     "sqlite3": "^5.0.2"
   }
